k8s/ingress/traefik/whoami.yaml

---
apiVersion: v1 
kind: Pod 
metadata: 
  name: whoami 
  labels: 
    app: whoami 
spec: 
  containers: 
    - name: whoami 
      image: traefik/whoami:latest 
      ports: 
        - containerPort: 80 
  

---
apiVersion: v1 
kind: Service 
metadata: 
  name: whoami 
spec: 
  ports: 
    - port: 80 
      protocol: TCP 
      targetPort: 80 
  selector: 
    app: whoami 
  type: ClusterIP
