k8s/ingress/traefik/whoami-route-tls.yaml
# cat ingressroutetls.yaml  
apiVersion: traefik.containo.us/v1alpha1 
kind: IngressRoute 
metadata: 
  name: whoami-route-tls 
spec: 
  entryPoints: 
  - websecure 
  routes: 
  - match: Host(`k8s.pyhuo.top`) 
    kind: Rule 
    services: 
      - name: whoami 
        port: 80  
  tls: 
    secretName: whoami-tls
